Link UI to the username
