# services/agora/src/utils/api/comment.ts
@@ -36,6 +36,7 @@ export function useBackendCommentApi() {
           numDislikes: item.numDislikes,
           numLikes: item.numLikes,
           updatedAt: new Date(item.updatedAt),
+          userName: item.userName
         });
       });
 
